# datapep

./: README.md  iot_example.json  pyproject.toml
src/dataprep/: __init__.py  importer.py  outliers.py  schema_validation.py
