[project]
name = "dataprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Veit  Schiele", email = "veit@cusy.io" }
]
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "pandas>=3.0.3",
    "tdda>=3.2.0",
]

[project.scripts]
dataprep = "dataprep:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
